<resources>
    <string name="app_name">WhoDoIOwe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="NEW">new</string>
    <string name="title_activity_owes_description">OwesDescription</string>
    <string name="title_activity_add_owe">AddOwe</string>

    <string name="oweTitle">Who do you owe?</string>
    <string name="initialName">person name</string>
    <string name="amountTitle">How much do you owe?</string>
    <string name="initialAmount">0.00</string>
    <string name="descriptionTitle">What do you owe him/her for?</string>
    <string name="initialDescription">Description</string>
    <string name="Increase">+</string>

    <string name="done">Done</string>
</resources>
